--- a/index.html
+++ b/index.html
@@ -71,6 +71,15 @@
         </div>
         <div id="projects" class="projects">
             <strong><p class="projects-title">Projects</p></strong>
+            <div class="projects-box">
+                <div class="project">
+                    <h4>WeatherApp</h4>
+                    <p>
+                        Api developed with usage of Python. Mainly focus on API integration and displaying live weather from choosen location.
+                    </p>
+                    <a href="https://github.com/CieslakPiotr/Python/tree/main/WeatherApp">View source code under the link.</a>
+                </div>
+            </div>
         </div>
         <div id="contact" class="contact">
             <strong><p class="contact-title">Contact</p></strong>
