--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <p>
                         Api developed with usage of Python. Mainly focus on API integration and displaying live weather from choosen location.
                     </p>
-                    <a href="https://github.com/CieslakPiotr/Python/tree/main/WeatherApp">View source code under the link.</a>
+                    <a href="https://github.com/CieslakPiotr/Python/tree/main/WeatherApp">View source code.</a>
                 </div>
             </div>
         </div>
