--- a/index.html
+++ b/index.html
@@ -75,9 +75,17 @@
                 <div class="project">
                     <h4>WeatherApp</h4>
                     <p>
-                        Api developed with usage of Python. Mainly focus on API integration and displaying live weather from choosen location.
+                        Application developed with usage of Python. Mainly focus on API integration and displaying live weather from choosen location.
                     </p>
-                    <a href="https://github.com/CieslakPiotr/Python/tree/main/WeatherApp">View source code.</a>
+                    <a href="https://github.com/CieslakPiotr/Python/tree/main/WeatherApp">View source code</a>
+                </div>
+                <div class="project">
+                    <h4>File Organizer</h4>
+                    <p>
+                        Program developed with usage of Python and its libraries such as os and pathlib. 
+                        Program mainly loops through the dictionaries under the current path and organizes files.
+                    </p>
+                    <a href="https://github.com/CieslakPiotr/Python/tree/main/FileOrganizer">View source code</a>
                 </div>
             </div>
         </div>
