--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
                 <div class="project">
                     <h4>File Organizer</h4>
                     <p>
-                        Program developed with usage of Python and its libraries such as os and pathlib. 
-                        Program mainly loops through the dictionaries under the current path and organizes files.
+                        Application developed with usage of Python and its libraries such as os and pathlib. 
+                        Application mainly loops through the dictionaries under the current path and organizes files.
                     </p>
                     <a href="https://github.com/CieslakPiotr/Python/tree/main/FileOrganizer">View source code</a>
                 </div>
