--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <p id="about_me" class="about_me">I love building websites and programs that are aesthetic and efficient.
                 I am a last year student at University of Greenwich where I learned about fundamentals of front-end and back-end development. At the moment I don't have any work experience,
                 however constantly I'm trying to develop my skills. Currently as it is my Final Year Project, I am trying to create Web-Based Booking and Management System for Hotels.             
-                Through these experiences, I had the oportunity to work on small and big selve-development projects and develop working style that leans towards flexibility and clarity.   
+                Through these experiences, I had an oportunity to work on small and big projects and develop working style that leans towards flexibility and clarity.   
                 </br></br>I'm currently looking for a new role as a developer. Hire me?</p>
             <div class="social-media">
                 <a href="https://github.com/CieslakPiotr" target="_blank">
