--- a/index.html
+++ b/index.html
@@ -24,19 +24,24 @@
             </div>
         </div>
         <div class="main_content">
-            <p class="intro-title">Hello, I'm a Software Developer</p>
-            <p id="about_me" class="about_me">I love building websites and programs that are aesthetic and efficient.
-                I am a last year student at University of Greenwich where I learned about fundamentals of front-end and back-end development. At the moment I don't have any work experience,
-                however constantly I'm trying to develop my skills. Currently as it is my Final Year Project, I am trying to create Web-Based Booking and Management System for Hotels.             
-                Through these experiences, I had an oportunity to work on small and big projects and develop working style that leans towards flexibility and clarity.   
-                </br></br>I'm currently looking for a new role as a developer. Hire me?</p>
-            <div class="social-media">
-                <a href="https://github.com/CieslakPiotr" target="_blank">
-                    <span><img src="icons/github-brands.svg">CieslakPiotr</span>
-                </a>
-                <a href="https://www.linkedin.com/in/piotr-cieslak-611935263/" target="_blank">
-                    <span><img src="icons/linkedin-in-brands.svg">Piotr Cieslak</span>
-                </a>
+            <div class="content-left">
+                <p class="intro-title">Hello, I'm a Software Developer</p>
+                <p id="about_me" class="about_me">I love building websites and programs that are aesthetic and efficient.
+                    I am a last year student at University of Greenwich where I learned about fundamentals of front-end and back-end development. At the moment I don't have any work experience,
+                    however constantly I'm trying to develop my skills. Currently as it is my Final Year Project, I am trying to create Web-Based Booking and Management System for Hotels.             
+                    Through these experiences, I had an oportunity to work on small and big projects and develop working style that leans towards flexibility and clarity.   
+                    </br></br>I'm currently looking for a new role as a developer. Hire me?</p>
+                <div class="social-media">
+                    <a href="https://github.com/CieslakPiotr" target="_blank">
+                        <span><img src="icons/github-brands.svg" class="socials-icons">CieslakPiotr</span>
+                    </a>
+                    <a href="https://www.linkedin.com/in/piotr-cieslak-611935263/" target="_blank">
+                        <span><img src="icons/linkedin-in-brands.svg" class="socials-icons">Piotr Cieslak</span>
+                    </a>
+                </div>
+            </div>
+            <div class="content-right">
+                <img src="icons/Photo.JPG" alt="Photo" class="profile-photo">
             </div>
         </div>
         <div id="services" class="services">
@@ -68,6 +73,13 @@
         </div>
         <div id="skills" class="skills">
             <strong><p class="skills-title">Skills</p></strong>
+            <div class="skills-icons">
+                <img src="icons/python.png" alt="Python icon" width="80" height="80">
+                <img src="icons/html-5.png" alt="HTML icon" width="80" height="80">
+                <img src="icons/css-3.png" alt="CSS icon" width="80" height="80">
+                <img src="icons/js.png" alt="JS icon" width="80" height="80">
+                <img src="icons/mysql-database.png" alt="MySQL icon" width="80" height="80">
+            </div>
         </div>
         <div id="projects" class="projects">
             <strong><p class="projects-title">Projects</p></strong>
